Changed way of invoking methods